--- a/bead/views/index.hbs
+++ b/bead/views/index.hbs
@@ -1,7 +1,7 @@
 <div class="page-header">
-    <h1>Hibabejelentés az IK-n</h1>
+    <h1>Tárgyfelvétel az IK-n</h1>
 </div>
 
 <p>
-    Blabla blabla blabla
+    Valami szöveg
 </p>
