--- a/bead/views/login/signup.hbs
+++ b/bead/views/login/signup.hbs
@@ -36,9 +36,9 @@
             </div>
         </div>
         <div class="form-group">
-            <label for="avatar" class="col-lg-2 control-label">Avatar URL</label>
+            <label for="teacher" class="col-lg-2 control-label">Tanár</label>
             <div class="col-lg-10">
-                <input class="form-control" type="text" id="avatar" name="avatar">
+                <input class="form-control" type="checkbox" id="role" name="teacher">
             </div>
         </div>
         
