A tárgyak felvétele kész. Apróbb módosítások...

--- a/bead/views/index.hbs
+++ b/bead/views/index.hbs
@@ -3,5 +3,5 @@
 </div>
 
 <p>
-    Valami szöveg
+    Regisztráció után a diákok itt tudják felvenni a tárgyaikat, a tanárok pedig itt tudnak hozzáadni általuk oktatott tárgyakat.
 </p>
