A feladat leegyszerüsítve. A diákok regisztrálás után saját maguk adják meg a tárgyak adatait. Ezeket le is tudják adni. A tanárok látják az összes létrehozott tárgyat, ezeket törölni is tudják.

--- a/bead/views/index.hbs
+++ b/bead/views/index.hbs
@@ -3,5 +3,5 @@
 </div>
 
 <p>
-    Regisztráció után a diákok itt tudják felvenni a tárgyaikat, a tanárok pedig itt tudnak hozzáadni általuk oktatott tárgyakat.
+    Regisztráció után a diákok itt tudják felvenni és leadni a tárgyaikat.
 </p>
