--- a/bead/views/layout.hbs
+++ b/bead/views/layout.hbs
@@ -7,7 +7,7 @@
 
     <title>Tárgyfelvétel
     {{#if isTeacher}}
-      (Tanár)
+      (Tanári felület)
     {{/if}}
     </title>
 
@@ -29,20 +29,10 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                       </button>
-                      <a class="navbar-brand" href="/subjects/list">Tárgyfelvétel
+                     <span class="header-text">Tárgyfelvétel</span>
                           {{#if isTeacher}}
                             (Tanár)
-                          {{/if}}</a>
-                      {{#if loggedIn}}
-                      <a class="navbar-brand" href="/subjects/mysubjects">
-                          {{#if isTeacher}}
-                            Oktatott 
-                          {{else}}
-                            Felvett 
                           {{/if}}
-                          tárgyaim
-                        </a>
-                      {{/if}}
                     </div>
 
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
