--- a/bead/views/login/signup.hbs
+++ b/bead/views/login/signup.hbs
@@ -44,8 +44,8 @@
         
         <div class="form-group">
             <div class="col-lg-10 col-lg-offset-2">
-                <button type="reset" class="btn btn-default">Cancel</button>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="reset" class="btn btn-default">Alaphelyzet</button>
+                <button type="submit" class="btn btn-primary">Küldés</button>
             </div>
         </div>
     </fieldset>
