--- a/views/subjects/list.hbs
+++ b/views/subjects/list.hbs
@@ -29,7 +29,7 @@
             <td>{{subject_code}}</td>
             <td>{{subject_name}}</td>
             <td>{{credit}}</td>
-            <td><input type="checkbox" class="subject-checkbox" name="{{id}}"></td>
+            <td><input type="checkbox" class="subject-checkbox" name="{{id}}" id="{{subject_code}}"></td>
         </tr>
         {{/each}}
         <tr class="info">
